# Task-9-hw

./: authors.json  main.py  pyproject.toml  quotes.json
